[package]
name = "influxdb_influxql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
sqlparser = { version = "0.18.0", features = ["serde", "serde_json"] }
serde_json = "1.0.82"
workspace-hack = { path = "../workspace-hack"}